test/conformance/chainsaw/mutating-policies/reporting/events-violation/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: isolated-ns
data:
  key1: value1
