test/conformance/chainsaw/mutating-policies/reporting/events-violation/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isolated-ns
