test/conformance/chainsaw/mutating-policies/reporting/events-violation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-admission-reporting
spec:
  steps:
  - name: create namespace
    try:
    - apply:
        file: ns.yaml
  - name: create ConfigMap
    try:
    - apply:
        file: configmap.yaml
    - assert:
        file: configmap.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: verify-policy
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-admission-reporting-mpol
  - name: sleep
    try:
    - sleep:
        duration: 3s
  - name: verify events
    try:
    - assert:
        file: event-assert.yaml
